--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "chokidar": "^3.5.3",
+    "dotenv": "^16.3.1",
+    "mime": "^3.0.0",
     "source-map-support": "^0.5.21",
     "sucrase": "^3.32.0"
   },
   "devDependencies": {
+    "@types/mime": "^3.0.1",
     "@types/node": "^20.4.1",
     "typescript": "^5.1.6"
   }
